src/test/resources/error/call.spl


def world() {
    a = 1
    print(a())
}

def hello() {
    world()
}

def main() {
    hello()
}

main()
